# tutorials-designer_widget_tutorial

./: CMakeLists.txt  manifest.xml
scripts/: test.rb  testwidget.ui
src/: CMakeLists.txt  Main.cpp  MyWidget.cc  MyWidget.h  MyWidget.pc  MyWidgetPlugin.cc  MyWidgetPlugin.h  main.cpp
